@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DBD-SQLite
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.64 2008/03/03 23:24:05 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.66 2008/06/07 09:50:44 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBD-SQLite-1.14.ebuild:
+  keyword ~sparc-fbsd
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBD-SQLite-1.14.ebuild:
+  keyword ~x86-fbsd
 
   03 Mar 2008; Christoph Mende <angelos@gentoo.org> DBD-SQLite-1.14.ebuild:
   Stable on amd64, bug #204222
